--- a/Source/Mosa.Kernel.BareMetal.ARMv8A32/Mosa.Kernel.BareMetal.ARMv8A32.csproj
+++ b/Source/Mosa.Kernel.BareMetal.ARMv8A32/Mosa.Kernel.BareMetal.ARMv8A32.csproj
@@ -6,6 +6,7 @@
     <OutputPath>..\..\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
+    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
