Mosa.Korlib.nuspec

--- a/Source/Mosa.Korlib/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Korlib/Mosa.Korlib.nuspec
@@ -1,5 +1,5 @@
-﻿﻿<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0"?>
+<package>
 	<metadata>
 		<id>Mosa.Korlib</id>
 		<version>$version$</version>
