--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -1,22 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net472</TargetFramework>
-    <ProjectGuid>{DFD831EA-79D8-49FC-8923-3AFFDA1283B9}</ProjectGuid>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyTitle>Mosa.Tool.GDBDebugger</AssemblyTitle>
+    <Title>Mosa.Tool.GDBDebugger</Title>
     <Company>MOSA Project</Company>
-    <Product>Mosa.Tool.GDBDebugger</Product>
     <Copyright>Copyright © 2019</Copyright>
-    <DebugType>full</DebugType>
     <LangVersion>8.0</LangVersion>
+    <DebugType>full</DebugType>
     <OutputPath>..\..\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <NoWarn>1591</NoWarn>
+    <WarningLevel>2</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Mosa.Tool.GDBDebugger.Program</StartupObject>
