--- a/Source/Mosa.Tool.Mosactl/Mosa.Tool.Mosactl.csproj
+++ b/Source/Mosa.Tool.Mosactl/Mosa.Tool.Mosactl.csproj
@@ -2,18 +2,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <AssemblyTitle>Mosa.Tool.Compiler</AssemblyTitle>
+    <Title>Mosa.Tool.Compiler</Title>
     <Company>MOSA Project</Company>
-    <Product>Mosa.Tool.Compiler</Product>
     <Copyright>Copyright © 2019</Copyright>
-    <ConfigurationOverrideFile />
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <FileAlignment>4096</FileAlignment>
-    <RemoveIntegerChecks>False</RemoveIntegerChecks>
-    <RegisterForComInterop>False</RegisterForComInterop>
-    <BaseAddress>285212672</BaseAddress>
+    <LangVersion>8.0</LangVersion>
     <DebugType>full</DebugType>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <OutputPath>..\..\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
