--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,12 +11,12 @@ shallow_clone: true
 build: off
 skip_tags: true
 
-assembly_info:
-  patch: true
-  file: AssemblyInfo.*
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
+# assembly_info:
+#   patch: true
+#   file: AssemblyInfo.*
+#   assembly_version: '{version}'
+#   assembly_file_version: '{version}'
+#   assembly_informational_version: '{version}'
 
 dotnet_csproj:
   patch: true
@@ -40,7 +40,7 @@ for:
     - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
-    - cmd: nuget restore -Verbosity quiet Source/Mosa.sln
+    - cmd: dotnet restore Source/Mosa.sln
 
     build:
       verbosity: minimal
@@ -49,12 +49,12 @@ for:
       publish_nuget: false
 
     after_build:
-    - cmd: nuget.exe pack Source/Mosa.Korlib/Mosa.Korlib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
-    - cmd: nuget.exe pack Source/Mosa.Runtime/Mosa.Runtime.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
-    - cmd: nuget.exe pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
-    - cmd: nuget.exe pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
-    - cmd: nuget.exe pack Source/Mosa.ClassLib/Mosa.ClassLib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
-    - cmd: nuget.exe pack Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: dotnet pack Source/Mosa.Korlib/Mosa.Korlib.nuspec
+    - cmd: dotnet pack Source/Mosa.Runtime/Mosa.Runtime.nuspec
+    - cmd: dotnet pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.nuspec
+    - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.nuspec
+    - cmd: dotnet pack Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
+    - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
@@ -124,12 +124,13 @@ for:
     - sh: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
 
     before_build:
-    - sh: mono $APPVEYOR_BUILD_FOLDER/Tools/nuget/nuget.exe restore -Verbosity quiet $APPVEYOR_BUILD_FOLDER/Source/Mosa.LinuxCI.sln
+    - sh: dotnet restore $APPVEYOR_BUILD_FOLDER/Source/Mosa.LinuxCI.sln
 
-    build: off
-
-    build_script:
-    - sh: msbuild $APPVEYOR_BUILD_FOLDER/Source/Mosa.LinuxCI.sln
+    build:
+      verbosity: minimal
+      parallel: true
+      project: Source/Mosa.sln
+      publish_nuget: false
 
     test_script:
     - sh: $APPVEYOR_BUILD_FOLDER/bin/Mosa.Tool.Mosactl test
