--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,12 +49,12 @@ for:
       publish_nuget: false
 
     after_build:
-    - cmd: dotnet pack Source/Mosa.Korlib/Mosa.Korlib.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
-    - cmd: dotnet pack Source/Mosa.Runtime/Mosa.Runtime.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
-    - cmd: dotnet pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
-    - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
-    - cmd: dotnet pack Source/Mosa.ClassLib/Mosa.ClassLib.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
-    - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj -p:NuspecProperties=\"version=$(APPVEYOR_BUILD_VERSION)\"
+    - cmd: dotnet pack Source/Mosa.Korlib/Mosa.Korlib.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+    - cmd: dotnet pack Source/Mosa.Runtime/Mosa.Runtime.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+    - cmd: dotnet pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+    - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+    - cmd: dotnet pack Source/Mosa.ClassLib/Mosa.ClassLib.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+    - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
