--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ for:
     - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
     - cmd: dotnet pack Source/Mosa.ClassLib/Mosa.ClassLib.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
     - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
-    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss \"/DMyAppVersion=%APPVEYOR_BUILD_VERSION%\"
 #   - ps: ./mosactl.ps1 unittest
 #   - ps: ./mosactl.ps1 test
 
@@ -74,7 +74,7 @@ for:
     artifacts:
     - path: bin\MOSA-Installer-*.exe
       name: installer
-    - path: Mosa.*.nupkg
+    - path: bin\Mosa.*.nupkg
 
     deploy:
       - provider: GitHub
