--- a/Source/Mosa.Korlib/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Korlib/Mosa.Korlib.nuspec
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
-<package >
+<package>
 	<metadata>
 		<id>Mosa.Korlib</id>
 		<version>$version$</version>
@@ -8,7 +8,7 @@
 		<owners>MOSA Project</owners>
 		<license type="expression">BSD-3-Clause-Clear</license>
 		<projectUrl>http://www.mosa-project.org</projectUrl>
-		<iconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</iconUrl>
+		<icon>images\Mosa Icon.png</icon>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>MOSA Corlib</summary>
 		<description>MOSA implementation of corlib</description>
@@ -17,6 +17,7 @@
 		<tags>MOSA Compiler corlib</tags>
 	</metadata>
 	<files>
+		<file src="..\Art\Mosa Icon.png" target="images\" />
 		<file src="..\..\bin\mscorlib.dll" target="lib\net472" />
 		<file src="..\..\bin\Mosa.Plug.Korlib.dll" target="lib\net472" />
 		<file src="..\..\bin\Mosa.Plug.Korlib.x86.dll" target="lib\net472" />
