--- a/Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj
+++ b/Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj
@@ -1,51 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <ProjectGuid>{3C5B4E7A-0380-4DA4-BE61-4B2E6485841A}</ProjectGuid>
     <UseWindowsForms>true</UseWindowsForms>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseMSBuildEngine>false</UseMSBuildEngine>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <AssemblyTitle>Mosa.Tools.Package</AssemblyTitle>
+    <Title>Mosa.Tools.Package</Title>
     <Company>MOSA Project</Company>
-    <Product>Mosa.Tools.Package</Product>
     <Description>MOSA Tools Package</Description>
     <Copyright>Copyright © 2019</Copyright>
     <Version>1.0.0.0</Version>
-    <LangVersion>8.0</LangVersion>
-    <DebugType>full</DebugType>
     <Authors>MOSA Project</Authors>
-    <PackageIconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</PackageIconUrl>
+    <PackageIcon>images\Mosa Icon.png</PackageIcon>
     <PackageId>Mosa.Tools.Package</PackageId>
     <PackageProjectUrl>http://www.mosa-project.org</PackageProjectUrl>
     <PackageTags>MOSA Compiler</PackageTags>
+    <LangVersion>8.0</LangVersion>
+    <DebugType>full</DebugType>
     <OutputPath>..\..\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
+    <NuspecFile>Mosa.Tools.Package.nuspec</NuspecFile>
     <NoWarn>1591</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon />
+    <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Composition" Version="4.6.0" />
@@ -60,5 +33,8 @@
     <ProjectReference Include="..\Mosa.Platform.x86\Mosa.Platform.x86.csproj" />
     <ProjectReference Include="..\Mosa.Utility.BootImage\Mosa.Utility.BootImage.csproj" />
     <ProjectReference Include="..\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Art\Mosa Icon.png" Pack="true" PackagePath="images\" />
   </ItemGroup>
 </Project>
