--- a/Source/Mosa.Utility.FileSystem/Mosa.Utility.FileSystem.csproj
+++ b/Source/Mosa.Utility.FileSystem/Mosa.Utility.FileSystem.csproj
@@ -43,5 +43,6 @@
       <Link>DeviceSystem\PartitionType.cs</Link>
     </Compile>
     <Compile Include="..\Mosa.FileSystem\**\*.cs" />
+    <Compile Remove="..\Mosa.FileSystem\obj\**\*" />
   </ItemGroup>
 </Project>
