- Experiment with DiscUtil

--- a/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
+++ b/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
@@ -14,6 +14,18 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
+    <PackageReference Include="Discutils" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Containers" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Core" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Ext" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Fat" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.FileSystems" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Iso9660" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Streams" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Vdi" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Vhd" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Vhdx" Version="0.15.1-ci0002" />
+    <PackageReference Include="DiscUtils.Vmdk" Version="0.15.1-ci0002" />
     <PackageReference Include="SharpDisasm" Version="1.1.11" />
   </ItemGroup>
   <ItemGroup>
