--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
           submodules: recursive      
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Upgrade Packages
-        run: sudo apt-get upgrade -y
+      # - name: Upgrade Packages
+      #   run: sudo apt-get upgrade -y
       - name: Install New Packages
         run: sudo apt-get install -y git wget qemu qemu-system qemu-system-x86
       - name: Restore nuget Packages
@@ -36,5 +36,5 @@ jobs:
           submodules: recursive      
       #- uses: crazy-max/ghaction-chocolatey@v1
       - name: Restore nuget packages
-        run: dotnet restore Source/Mosa.sln
+        run: dotnet restore Mosa.sln
         working-directory: Source
