--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,11 +49,11 @@ for:
       publish_nuget: false
 
     after_build:
-    - cmd: dotnet pack Source/Mosa.Korlib/Mosa.Korlib.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
-    - cmd: dotnet pack Source/Mosa.Runtime/Mosa.Runtime.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
-    - cmd: dotnet pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
-    - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
-    - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+#    - cmd: dotnet pack Source/Mosa.Korlib/Mosa.Korlib.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+#    - cmd: dotnet pack Source/Mosa.Runtime/Mosa.Runtime.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+#    - cmd: dotnet pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+#    - cmd: dotnet pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
+#    - cmd: dotnet pack Source/Mosa.Tools.Package/Mosa.Tools.Package.csproj -p:NuspecProperties=\"version=%APPVEYOR_BUILD_VERSION%\"
     - cmd: ISCC.exe "/DMyAppVersion=%APPVEYOR_BUILD_VERSION%" Source/Inno-Setup-Script/Mosa-Installer.iss
     - cmd: bin\Mosa.Utility.UnitTests.exe -settings tests\UnitTest.settings
 #    - cmd: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.TestWorld.x86.exe -s Launcher.MonitorTest=true
